Update exomiser-core/results.html to use Variant.id in place of rsId to allow nsv, esv etc... Update exomiser-core/results.html to display GeneScore objects in ranked order Update exomiser-core/results.html to include the "Other passed variants" section only if there are some to display. Add new Gene.getNonContributingPassedVariantEvaluations() method